# FourierEngine

./: .gitignore  CMakeLists.txt  README.md  tmp
Binaries/: spvc.cmd
Engine/Binaries/: simple_shader.frag.spv  simple_shader.vert.spv
Engine/Scripts/: assets.py  fool.py
Engine/Source/Binaries/: vert.spv
Engine/Source/Include/: Config.h  Date.h  Debug.cpp  Debug.h  Engine.h  Fourier.h  Logger.h  Math.h  NEDEF.h  NRIVCNF.h  Nanoriv.h  Nature.h  SportsCore.h  System.h  Typedef.h  VCNF.h  VRRT.h  engcnf.h  pch.cpp  pch.h  precompile.cpp  precompile.h  vfluxpch.cpp
Engine/Source/Include/Aurora/: Color.h  Date.h  Engine.h  IOUtils.h  Logger.h  System.h  Typedef.h
Engine/Source/Include/Editor/: DearImGuiEditor.h  Editor.h
Engine/Source/Include/Render/: Camera.h  Renderable.h  VRRTrenderer.h
Engine/Source/Include/Render/Camera/: OrthoCamera.h
Engine/Source/Include/Render/Vulkan/: NVRIrenderer.h  VulkanRenderer.h
Engine/Source/Include/Utils/: IOUtils.h  Time.h
Engine/Source/Include/Window/: NATwindow.h  NatureWindow.h  Window.h
Engine/Source/Runtime/: Engine.cpp  EngineMain.cpp  Main.cpp  main.cpp
Engine/Source/Runtime/Editor/: DearImGuiEditor.cpp  Editor.cpp  GameEditor.cpp  GameEditor.h  GedUI.cpp  GedUI.h
Engine/Source/Runtime/Render/: Camera.h  GameModel.h  NRIVRenderer.cpp  NRIVRenderer.h  RIVdevice.cpp  RIVdevice.h  RenderAPI.cpp  RenderAPI.h  RenderContext.h  Renderable.h  RendererAPI.cpp  RendererAPI.h  RivuletRenderer.h  VKRHI.cpp  VKRHI.h  VRHI.cpp  VRHI.h  VRRTrenderer.cpp  VRRTrenderer.h  VkContext.cpp  VkContext.h  VkDefineHandle.h  VkUtils.h  VulkanContext.cpp  VulkanContext.h  VulkanRenderAPI.cpp  VulkanRenderAPI.h  VulkanUtils.h
Engine/Source/Runtime/Render/Camera/: Camera.h  OrthoCamera.cpp  OrthoCamera.h
Engine/Source/Runtime/Render/Demo/: VulkanRenderAPI.cpp  VulkanRenderAPI.h
Engine/Source/Runtime/Render/Drivers/Vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanUtils.h
Engine/Source/Runtime/Render/Model/: GameModel.h
Engine/Source/Runtime/Render/Private/: RIVdevice.cpp  RIVdevice.h  RIVswapchain.cpp  RIVswapchain.h  RivuletRenderer.cpp
Engine/Source/Runtime/Render/Vulkan/: NVRIrenderer.cpp  VulkanContext.cpp  VulkanContext.h  VulkanRenderer.cpp  VulkanTypedef.h
Engine/Source/Runtime/Script/: Python3.cpp  Python3.h
Engine/Source/Runtime/Shaders/: simple_shader.frag
Engine/Source/Runtime/Utils/: IOUtils.h  ModelLoader.h
Engine/Source/Runtime/Utils/Model/: ObjLoader.h
Engine/Source/Runtime/Vulkan/: Vulkan.cpp  Vulkan.h
Engine/Source/Runtime/Window/: GLWIN.cpp  GLWIN.h  NATwindow.cpp  NRIVwindow.cpp  NRIVwindow.h  NatureWindow.cpp  RIVwindow.cpp  RIVwindow.h  VRRTwindow.cpp  VRRTwindow.h  Window.cpp  Window.h
Engine/Source/Shader/: simple.frag
Engine/Source/Shaders/: simple_shader.frag  simple_shader.vert
Refactor/v1.0/: CMakeLists.txt
Refactor/v1.0/Engine/Source/Include/: Engine.h  EngineConfig.h
Refactor/v1.0/Engine/Source/Include/Render/Camera/: Camera.h  OrthoCamera.h
Refactor/v1.0/Engine/Source/Include/Render/Renderable/: GameModel.h
Refactor/v1.0/Engine/Source/Include/Render/Vulkan/: VulkanRenderer.h
Refactor/v1.0/Engine/Source/Include/Utils/: IOUtils.h
Refactor/v1.0/Engine/Source/Runtime/Editor/: DearImGuiEditor.cpp
Refactor/v1.0/Engine/Source/Runtime/Render/Vulkan/: VulkanRenderer.cpp
Refactor/v1.0/Engine/Source/Runtime/Window/: Window.cpp
Refactor/v1.1/Engine/Source/Include/: Config.h  SportsCore.h  Typedef.h
Refactor/v1.1/Engine/Source/Runtime/Render/Vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanTypedef.h
